--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# http://docs.travis-ci.com/user/customizing-the-build/
+
 language: java
 
 jdk:
@@ -8,6 +10,9 @@ install:
 
 script:
  - mvn clean compile test -Dgpg.skip=true
+
+after_success: 
+  - mvn clean test jacoco:report coveralls:report -DrepoToken=$coveralls_token
 
 notifications:
   email: false
