--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,7 @@ See LICENSE file at the project root for terms.
           <autoReleaseAfterClose>false</autoReleaseAfterClose>
         </configuration>
       </plugin>
+<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -166,6 +167,84 @@ See LICENSE file at the project root for terms.
           <useFile>false</useFile>
         </configuration>
       </plugin>
+-->
+      <!-- Code coverage plugin, generates coverage report to target/site/jacoco/
+         To skip coverage generation add -Djacoco.skip=true
+      -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.5.201505241946</version>
+        <executions>
+          <!--
+          Prepares the property pointing to the JaCoCo runtime agent which
+          is passed as VM argument when Maven the Surefire plugin is executed.
+          -->
+          <execution>
+            <id>pre-unit-test</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+              <!-- Sets the path to the file which contains the execution data. -->
+              <destFile>${jacoco.ut.execution.data.file}</destFile>
+              <!--
+              Sets the name of the property containing the settings
+              for JaCoCo runtime agent.
+              -->
+              <propertyName>surefireArgLine</propertyName>
+            </configuration>
+          </execution>
+          <!--
+          Ensures that the code coverage report for unit tests is created after
+          unit tests have been run.
+          -->
+          <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <configuration>
+              <!-- Sets the path to the file which contains the execution data. -->
+              <dataFile>${jacoco.ut.execution.data.file}</dataFile>
+              <!-- Sets the output directory for the code coverage report. -->
+              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-check</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <!-- implementation is needed only for Maven 2 -->
+                <rule implementation="org.jacoco.maven.RuleConfiguration">
+                  <element>BUNDLE</element>
+                  <limits>
+                    <!-- implementation is needed only for Maven 2 -->
+                    <limit implementation="org.jacoco.report.check.Limit">
+                      <counter>INSTRUCTION</counter>
+                      <value>COVEREDRATIO</value>
+                      <minimum>0.90</minimum>
+                    </limit>
+                  </limits>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Coveralls is a online code coverage reporting tool that leverages JaCoCo -->
+      <plugin>
+          <groupId>org.eluder.coveralls</groupId>
+          <artifactId>coveralls-maven-plugin</artifactId>
+          <version>4.0.0</version>
+          <configuration>
+              <repoToken></repoToken>
+          </configuration>
+      </plugin>
 
     </plugins>
     <pluginManagement>
@@ -173,10 +252,12 @@ See LICENSE file at the project root for terms.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.18.1</version>
           <configuration>
             <!-- locale settings must be set on the command line before startup -->
             <!-- set heap size to work around https://github.com/travis-ci/travis-ci/issues/3396 -->
-            <argLine>-Xmx1024m -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8</argLine>
+            <argLine> -Xmx1024m -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8 ${surefireArgLine} </argLine>
+            <useFile>false</useFile>
             <redirectTestOutputToFile>false</redirectTestOutputToFile>
           </configuration>
         </plugin>
