--- a/pom.xml
+++ b/pom.xml
@@ -158,16 +158,16 @@ See LICENSE file at the project root for terms.
           <autoReleaseAfterClose>false</autoReleaseAfterClose>
         </configuration>
       </plugin>
-<!--
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <!-- <version>2.18.1</version> -->
         <configuration>
           <useFile>false</useFile>
         </configuration>
       </plugin>
--->
+
       <!-- Code coverage plugin, generates coverage report to target/site/jacoco/
          To skip coverage generation add -Djacoco.skip=true
       -->
