--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
-Copyright 2015, Yahoo! Inc.
-Licensed under the terms of the Apache License 2.0. 
-See LICENSE file at the project root for terms. 
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Copyright 2015, Yahoo! Inc.
+     Licensed under the terms of the Apache License 2.0. 
+     See LICENSE file at the project root for terms. -->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.yahoo.datasketches</groupId>
@@ -44,7 +44,6 @@ See LICENSE file at the project root for terms.
     <tag>HEAD</tag>
   </scm>
 
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
@@ -61,6 +60,7 @@ See LICENSE file at the project root for terms.
       <artifactId>sketches-core</artifactId>
       <version>0.1.1</version>
     </dependency>
+
     <!-- Hive Dependencies (provided scope) -->
     <dependency>
       <groupId>org.apache.hive</groupId>
@@ -68,18 +68,21 @@ See LICENSE file at the project root for terms.
       <version>0.13.0</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <version>2.6.0</version>
       <artifactId>hadoop-common</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <version>2.6.0</version>
       <scope>provided</scope>
     </dependency>
+
     <!-- Test Scope -->
     <dependency>
       <groupId>org.testng</groupId>
@@ -87,12 +90,14 @@ See LICENSE file at the project root for terms.
       <version>6.8.8</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-core</artifactId>
       <version>1.3</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
@@ -103,6 +108,7 @@ See LICENSE file at the project root for terms.
 
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
@@ -117,6 +123,7 @@ See LICENSE file at the project root for terms.
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -133,6 +140,7 @@ See LICENSE file at the project root for terms.
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
@@ -147,6 +155,7 @@ See LICENSE file at the project root for terms.
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -158,19 +167,9 @@ See LICENSE file at the project root for terms.
           <autoReleaseAfterClose>false</autoReleaseAfterClose>
         </configuration>
       </plugin>
-<!-- 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-          <useFile>false</useFile>
-        </configuration>
-      </plugin>
--->
+
       <!-- Code coverage plugin, generates coverage report to target/site/jacoco/
-         To skip coverage generation add -Djacoco.skip=true
-      -->
+           To skip coverage generation add -Djacoco.skip=true -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -178,8 +177,7 @@ See LICENSE file at the project root for terms.
         <executions>
           <!--
           Prepares the property pointing to the JaCoCo runtime agent which
-          is passed as VM argument when Maven the Surefire plugin is executed.
-          -->
+          is passed as VM argument when Maven the Surefire plugin is executed. -->
           <execution>
             <id>pre-unit-test</id>
             <goals>
@@ -195,10 +193,8 @@ See LICENSE file at the project root for terms.
               <propertyName>surefireArgLine</propertyName>
             </configuration>
           </execution>
-          <!--
-          Ensures that the code coverage report for unit tests is created after
-          unit tests have been run.
-          -->
+          <!-- Ensures that the code coverage report for unit tests is created after
+               unit tests have been run. -->
           <execution>
             <id>post-unit-test</id>
             <phase>test</phase>
@@ -236,6 +232,7 @@ See LICENSE file at the project root for terms.
           </execution>
         </executions>
       </plugin>
+
       <!-- Coveralls is a online code coverage reporting tool that leverages JaCoCo -->
       <plugin>
           <groupId>org.eluder.coveralls</groupId>
@@ -247,8 +244,10 @@ See LICENSE file at the project root for terms.
       </plugin>
 
     </plugins>
+
     <pluginManagement>
       <plugins>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -261,56 +260,67 @@ See LICENSE file at the project root for terms.
             <redirectTestOutputToFile>false</redirectTestOutputToFile>
           </configuration>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>2.5</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>2.8</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-help-plugin</artifactId>
           <version>2.1.1</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.3.1</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.5</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>2.4</version>
         </plugin>
+
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>license-maven-plugin</artifactId>
           <version>1.8</version>
         </plugin>
+
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
           <version>1.2.1</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
@@ -321,6 +331,7 @@ See LICENSE file at the project root for terms.
       <build>
         <pluginManagement>
           <plugins>
+
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
@@ -338,6 +349,7 @@ See LICENSE file at the project root for terms.
                 </dependency>
               </dependencies>
             </plugin>
+
           </plugins>
         </pluginManagement>
       </build>
