--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 
   <developers>
     <developer>
-      <name>Lee Rhodes</name>
-      <url>https://github.com/leerho</url>
+      <name>Will Lauer</name>
+      <url>https://github.com/will-lauer</url>
     </developer>
   </developers>
 
