--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,12 @@
      Licensed under the terms of the Apache License 2.0. 
      See LICENSE file at the project root for terms. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.yahoo.datasketches</groupId>
   <artifactId>sketches-hive</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.2.0</version>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Data Sketches Hive UDFs</description>
@@ -41,7 +39,7 @@
     <connection>scm:git:ssh://git@github.com/DataSketches/sketches-hive.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/DataSketches/sketches-hive.git</developerConnection>
     <url>https://github.com/DataSketches/sketches-hive.git</url>
-    <tag>HEAD</tag>
+    <tag>sketches-hive-0.2.0</tag>
   </scm>
 
   <properties>
@@ -257,7 +255,7 @@
         <artifactId>coveralls-maven-plugin</artifactId>
         <version>4.0.0</version>
         <configuration>
-          <repoToken></repoToken>
+          <repoToken />
         </configuration>
       </plugin>
 
