--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
   </properties>
 
   <dependencies>
-    <!-- Core Sketch library -->
+    <!-- Core Sketch library 
     <dependency>
       <groupId>com.yahoo.datasketches</groupId>
       <artifactId>sketches-core</artifactId>
       <version>0.2.2</version>
-    </dependency>
+    </dependency> -->
 
     <!-- Hive Dependencies (provided scope) -->
     <dependency>
@@ -68,8 +68,8 @@
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <version>2.6.0</version>
       <artifactId>hadoop-common</artifactId>
+      <version>2.6.0</version>
       <scope>provided</scope>
     </dependency>
 
