--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
   </properties>
 
   <dependencies>
-    <!-- Core Sketch library 
+    <!-- Core Sketch library --> 
     <dependency>
       <groupId>com.yahoo.datasketches</groupId>
       <artifactId>sketches-core</artifactId>
       <version>0.2.2</version>
-    </dependency> -->
+    </dependency>
 
     <!-- Hive Dependencies (provided scope) -->
     <dependency>
