--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
-      <version>2.0.0</version>
+      <version>1.2.1</version>
       <scope>provided</scope>
     </dependency>
 
@@ -121,8 +121,17 @@
                   <include>com.yahoo.datasketches:sketches-core</include>
                 </includes>
               </artifactSet>
+              <relocations>
+                <relocation>
+                  <pattern>com.yahoo.sketches</pattern>
+                  <shadedPattern>shaded.com.yahoo.sketches</shadedPattern>
+                  <excludes>
+                    <exclude>com.yahoo.sketches.hive.**</exclude>
+                  </excludes>
+                </relocation>
+              </relocations>
               <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>incDeps</shadedClassifierName>
+              <shadedClassifierName>with-shaded-core</shadedClassifierName>
             </configuration>
           </execution>
         </executions>
