--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
      Licensed under the terms of the Apache License 2.0. 
      See LICENSE file at the project root for terms. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.yahoo.datasketches</groupId>
@@ -13,19 +13,19 @@
   <!-- Project Information -->
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Data Sketches Hive</description>
-  <url>http://datasketches.github.io/</url>
+  <url>https://datasketches.github.io/</url>
   <inceptionYear>2015</inceptionYear>
 
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
     </license>
   </licenses>
 
   <organization>
     <name>Yahoo! Inc.</name>
-    <url>http://www.yahoo.com</url>
+    <url>https://www.yahoo.com</url>
   </organization>
 
   <developers>
@@ -103,7 +103,7 @@
     <repository>
       <id>jcenter</id>
       <name>bintray</name>
-      <url>http://jcenter.bintray.com</url>
+      <url>https://jcenter.bintray.com</url>
     </repository>
   </repositories>
 
