--- a/pom.xml
+++ b/pom.xml
@@ -293,63 +293,22 @@
       <!-- Code coverage plugin, generates coverage report to target/site/jacoco/
            To skip coverage generation add -Djacoco.skip=true -->
       <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.9</version>
-        <executions>
-          <!-- Prepares the property pointing to the JaCoCo runtime agent which
-               is passed as VM argument when Maven the Surefire plugin is executed. -->
-          <execution>
-            <id>pre-unit-test</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <destFile>${jacoco.ut.execution.data.file}</destFile>
-              <!-- Sets the name of the property containing the settings for JaCoCo runtime agent. 
-                   Used by the surefire plugin -->
-              <propertyName>JaCoCoArgLine</propertyName>
-            </configuration>
-          </execution>
-          <!-- Ensures that the code coverage report for unit tests is created after
-               unit tests have been run. -->
-          <execution>
-            <id>post-unit-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-            <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
-              <dataFile>${jacoco.ut.execution.data.file}</dataFile>
-              <!-- Sets the output directory for the code coverage report. -->
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>default-check</id>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <!-- implementation is needed only for Maven 2 -->
-                <rule implementation="org.jacoco.maven.RuleConfiguration">
-                  <element>BUNDLE</element>
-                  <limits>
-                    <!-- implementation is needed only for Maven 2 -->
-                    <limit implementation="org.jacoco.report.check.Limit">
-                      <counter>INSTRUCTION</counter>
-                      <value>COVEREDRATIO</value>
-                      <minimum>0.80</minimum>
-                    </limit>
-                  </limits>
-                </rule>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>prepare-agent</goal>
+                  </goals>
+              </execution>
+              <execution>
+                  <id>report</id>
+                  <phase>test</phase>
+                  <goals>
+                      <goal>report</goal>
+                  </goals>
+              </execution>
+          </executions>
       </plugin>
 
       <!-- Coveralls is a online code coverage reporting tool that leverages JaCoCo -->
@@ -363,20 +322,8 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
-        <configuration>
-          <!-- locale settings must be set on the command line before startup -->
-          <!-- set heap size to work around https://github.com/travis-ci/travis-ci/issues/3396 -->
-          <!-- Eclipse runtime config for TestNG will only look at the first argLine definition.
-               When running Maven test, the second one will override the first and pull in the 
-               JaCoCo arguments. This is a hack to fix a nasty Eclipse bug. -->
-          <argLine> -Xmx1024m -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8 </argLine> 
-          <argLine> -Xmx1024m -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8 ${JaCoCoArgLine} </argLine>
-          <useFile>false</useFile>
-          <redirectTestOutputToFile>false</redirectTestOutputToFile>
-        </configuration>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
       </plugin>
 
     </plugins>
@@ -442,6 +389,18 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
           <version>1.6.0</version>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20.1</version>
+        </plugin>
+
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.7.9</version>
         </plugin>
 
       </plugins>
