--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
   <scm>
     <connection>scm:git:ssh://git@github.com/DataSketches/sketches-hive.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/DataSketches/sketches-hive.git</developerConnection>
-    <url>https://github.com/DataSketches/sketches-hive.git</url>
+    <url>https://github.com/DataSketches/sketches-hive</url>
     <tag>HEAD</tag>
   </scm>
 
