--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,13 @@ jdk:
  - oraclejdk8
 
 install:
- - mvn install -Dmaven.javadoc.skip=true -Dsource.skip=true -DskipTests=true -Dgpg.skip=true
+ - mvn install -Dmaven.javadoc.skip=true -Dsource.skip=true -DskipTests=true -Dgpg.skip=true  | egrep -v "(^\[INFO\])"
 
 script:
- - mvn clean compile test -Dgpg.skip=true
+ - mvn clean compile test -Dgpg.skip=true  | egrep -v "(^\[INFO\])"
 
 after_success: 
-  - mvn clean test jacoco:report coveralls:report -DrepoToken=$coveralls_token
+  - mvn clean test jacoco:report coveralls:report -DrepoToken=$coveralls_token  | egrep -v "(^\[INFO\])"
 
 notifications:
   email: false
