--- a/.gitignore
+++ b/.gitignore
@@ -4,31 +4,60 @@
 .settings/
 .checkstyle
 
-#OSX files
+# IntelliJ project files
+*.iml
+*.ipr
+*.iws
+
+# Additional tools
+.clover/
+
+# OSX files
 .DS_Store
 
 # Compiler output, class files
+*.class
 bin/
 
-#Test output
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+#Test config and output
+/target/
 test-output/
-.clover/
 local/
 reports/
 .pmd
 tmp/
 
 # Build artifacts
-target/
 out/
 build/
 jarsIn/
 *.jar
 build.xml
 .idea
-*.iml
 *.properties
 *.releaseBackup
+*.next
+*.tag
 
 # Jekyll
 Gemfile
@@ -36,4 +65,3 @@ Gemfile.lock
 _site/
 _*
 _*/
-
