--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ under the License.
   <artifactId>datasketches-hive</artifactId>
   <version>1.1.0-incubating-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-  <description>Hive adaptors for the DataSketches library.</description>
+  <description>Apache Hive adaptors for the DataSketches library.</description>
   <url>https://datasketches.apache.org/</url>
   <inceptionYear>2015</inceptionYear>
   <packaging>jar</packaging>
