--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@ specific language governing permissions and limitations
 under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -27,11 +27,15 @@ under the License.
     <version>21</version>
   </parent>
   <groupId>org.apache.datasketches</groupId>
+
+  <!-- UNIQUE FOR THIS JAVA COMPONENT -->
   <artifactId>datasketches-hive</artifactId>
   <version>1.1.0-incubating-SNAPSHOT</version>
-  <name>${project.artifactId}</name>
   <description>Apache Hive adaptors for the DataSketches library.</description>
+  <!-- END: UNIQUE FOR THIS JAVA COMPONENT -->
+
   <url>https://datasketches.apache.org/</url>
+  <name>${project.artifactId}</name>
   <inceptionYear>2015</inceptionYear>
   <packaging>jar</packaging>
   <!-- jar is the default -->
@@ -88,6 +92,17 @@ under the License.
     </developer>
   </developers>
   <properties>
+    
+    <!-- UNIQUE FOR THIS JAVA COMPONENT -->
+    <datasketches-java.version>1.1.0-incubating</datasketches-java.version>
+    <hive-exec.version>2.3.4</hive-exec.version>
+    <hadoop-common.version>2.8.5</hadoop-common.version>
+    <hadoop-mapreduce-client-core.version>2.8.5</hadoop-mapreduce-client-core.version>
+    <slf4j-simple.version>1.7.27</slf4j-simple.version>
+    <!-- END:UNIQUE FOR THIS JAVA COMPONENT -->
+    
+    <!-- Test -->
+    <testng.version>6.14.3</testng.version>
     <!-- System-wide properties -->
     <argLine>-Xmx4g -Duser.language=en -Duser.country=US -Dfile.encoding=UTF-8</argLine>
     <charset.encoding>UTF-8</charset.encoding>
@@ -97,13 +112,6 @@ under the License.
     <java.version>1.8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <!-- Dependencies -->
-    <datasketches-java.version>1.1.0-incubating</datasketches-java.version>
-    <hive-exec.version>2.3.4</hive-exec.version>
-    <hadoop-common.version>2.8.5</hadoop-common.version>
-    <hadoop-mapreduce-client-core.version>2.8.5</hadoop-mapreduce-client-core.version>
-    <testng.version>6.14.3</testng.version>
-    <slf4j-simple.version>1.7.27</slf4j-simple.version>
     <!-- org.codehaus.plexus used for strict profile testing-->
     <plexus-compiler-javac-errorprone.version>2.8.5</plexus-compiler-javac-errorprone.version>
     <!--  Maven Plugins -->
@@ -153,20 +161,19 @@ under the License.
     </repository>
   </repositories>
   <dependencies>
-    <!-- datasketches-java -->
+    
+    <!-- UNIQUE FOR THIS JAVA COMPONENT -->
     <dependency>
       <groupId>org.apache.datasketches</groupId>
       <artifactId>datasketches-java</artifactId>
       <version>${datasketches-java.version}</version>
     </dependency>
-    <!-- Hive Dependencies (provided scope) -->
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
       <version>${hive-exec.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!-- hadoop -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
@@ -179,6 +186,8 @@ under the License.
       <version>${hadoop-mapreduce-client-core.version}</version>
       <scope>provided</scope>
     </dependency>
+    <!-- END: UNIQUE FOR THIS JAVA COMPONENT -->
+    
     <!-- Test Scope -->
     <dependency>
       <groupId>org.testng</groupId>
