Creating Release Branch 1.1.X

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ under the License.
   
   <!-- UNIQUE FOR THIS JAVA COMPONENT -->
   <artifactId>datasketches-hive</artifactId>
-  <version>1.1.0-incubating-SNAPSHOT</version>
+  <version>1.1.0-incubating</version>
   <description>Apache Hive adaptors for the DataSketches library.</description>
   <!-- END: UNIQUE FOR THIS JAVA COMPONENT -->
   
