--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@ under the License.
   <properties>
     <!-- UNIQUE FOR THIS JAVA COMPONENT -->
     <datasketches-java.version>2.0.0</datasketches-java.version>
+    <datasketches-memory.version>1.3.0</datasketches-memory.version>
     <hive-exec.version>2.3.4</hive-exec.version>
     <hadoop-common.version>2.8.5</hadoop-common.version>
     <slf4j-simple.version>1.7.30</slf4j-simple.version>
@@ -164,6 +165,11 @@ under the License.
       <groupId>org.apache.datasketches</groupId>
       <artifactId>datasketches-java</artifactId>
       <version>${datasketches-java.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.datasketches</groupId>
+      <artifactId>datasketches-memory</artifactId>
+      <version>${datasketches-memory.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
