--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@ under the License.
 
   <groupId>org.apache.datasketches</groupId>
   <artifactId>datasketches-hive</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>jar</packaging>
 
   <name>${project.artifactId}</name>
